implement paging & searching for PointOfInterestController